pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/import_merging/src/mod.ph
mod nat;
use nat.*;

mod export_nat_1;
use export_nat_1.Nat;

mod export_nat_2;
use export_nat_2.*;

pub use nat.Nat;
