pamc/src/tests/sample_code/should_fail/multi_file/bind/wildcard_downgrades_visibility/src/foo/mod.ph
pub mod bar;
pub use bar.*;
